<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.1.1</version>
    </parent>
    <groupId>ua.foxminded.muzychenko</groupId>
    <artifactId>university-cms</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>university-data</module>
        <module>university-service</module>
        <module>university-ui</module>
        <module>university-code-coverage</module>
    </modules>

    <properties>
        <java.version>17</java.version>
        <mockito.version>5.3.1</mockito.version>
        <maven.surefire.version>3.0.0-M7</maven.surefire.version>
        <jacoco.version>0.8.11</jacoco.version>
        <project.info.reports.version>3.0.0</project.info.reports.version>
        <checkstyle.plugin.version>3.3.0</checkstyle.plugin.version>
        <bootstrap.version>5.3.1</bootstrap.version>
        <jquery.version>3.7.1</jquery.version>
        <font-awesome.version>6.4.2</font-awesome.version>
        <university-cms.coverage-rate>0.10</university-cms.coverage-rate>
        <university-data.coverage-rate>0.10</university-data.coverage-rate>
        <university-service.coverage-rate>0.10</university-service.coverage-rate>
        <university-ui.coverage-rate>0.10</university-ui.coverage-rate>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>ua.foxminded.muzychenko</groupId>
                <artifactId>university-data</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>ua.foxminded.muzychenko</groupId>
                <artifactId>university-service</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>ua.foxminded.muzychenko</groupId>
                <artifactId>university-ui</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.webjars</groupId>
                <artifactId>bootstrap</artifactId>
                <version>${bootstrap.version}</version>
            </dependency>
            <dependency>
                <groupId>org.webjars</groupId>
                <artifactId>jquery</artifactId>
                <version>${jquery.version}</version>
            </dependency>
            <dependency>
                <groupId>org.webjars</groupId>
                <artifactId>font-awesome</artifactId>
                <version>${font-awesome.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>
                <executions>
                    <!-- jacoco agent for unit-tests code coverage -->
                    <execution>
                        <id>initialize-coverage-before-unit-test-execution</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- UNIT tests-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <configuration>
                    <excludes>
                        <exclude>**/*IT.java</exclude>
                    </excludes>
                    <!--
                         NOTE: In case if you need to pass in special JVM argumengts for instance say, to enable Java language
                         preview features, the following is how it MUST be done. The @{argLine} goes through late evaluattion that
                         points to Jacoco agent JVM argument followed by any additional JVM arguments of your choice each separated
                         by space. The expression @{argLine} retains Jacoco JVM agent argument. Without this any additional JVM
                         arguments that you add will be taken but you lose Jacoco's argument causing to lose code coverage report
                         files and hence the coverage report.
                    -->
                    <argLine>@{argLine} --enable-preview</argLine>
                </configuration>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <configuration>
                        <excludes>
                            <exclude>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                            </exclude>
                        </excludes>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>${checkstyle.plugin.version}</version>
                <reportSets>
                    <reportSet>
                        <reports>
                            <report>checkstyle</report>
                        </reports>
                    </reportSet>
                </reportSets>
            </plugin>
        </plugins>
    </reporting>

</project>
